--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     <div class="header">
         <div class="sidebar">
-            <img src="images/menu.png" alt="">
-            <img src="images/search.png" alt="">
+            <img src="menu.png" alt="">
+            <img src="search.png" alt="">
            <div class="social-media">
-               <a href=""><img src="images/instagram.png"></a>
-               <a href=""><img src="images/facebook.png"></a>
-               <a href=""><img src="images/twitter.png"></a>
+               <a href=""><img src="instagram.png"></a>
+               <a href=""><img src="facebook.png"></a>
+               <a href=""><img src="twitter.png"></a>
            </div>
         </div>
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo">
-                <img src="images/shop.png" class="shop-icon">
+                <img src="logo.png" class="logo">
+                <img src="shop.png" class="shop-icon">
             </nav>
             <img src="images/play.png" class="play-icon">
             <div class="info">
