--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="logo.png" class="logo">
                 <img src="shop.png" class="shop-icon">
             </nav>
-            <img src="images/play.png" class="play-icon">
+            <img src="play.png" class="play-icon">
             <div class="info">
                 <h3>Beli <br>NOw</h3>
                 <h1>Ike_Shop</h1>
